--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(LearningC)
 
 set(CMAKE_CXX_STANDARD 23)
 
-add_executable(LearningC main.cpp shuntingYardAlgorithm.h FrequencyAnalysis.h)
+add_executable(LearningC main.cpp)
