Create program for determinant
And start to create the program to find inverse matrix

--- a/SSAD/CMakeLists.txt
+++ b/SSAD/CMakeLists.txt
@@ -3,4 +3,4 @@ project(SSAD)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(SSAD main.cpp FindSumArray.h FindSubstrings.h)
+add_executable(SSAD main.cpp FindSumArray.h FindSubstrings.h Determinant.h)
